k8s/search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      containers:
        - name: search-service
          image: deelish/search-service:latest
          imagePullPolicy: Never  
          ports:
            - containerPort: 3005
          volumeMounts:
            - name: search-data
              mountPath: /data
      volumes:
        - name: search-data
          hostPath:
            path: /tmp/deelish/search      # path on the Docker Desktop VM
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  selector:
    app: search-service
  ports:
    - port: 3005
      targetPort: 3005
