k8s/social-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social-service
  template:
    metadata:
      labels:
        app: social-service
    spec:
      containers:
        - name: social-service
          image: deelish/social-service:latest
          imagePullPolicy: Never  
          ports:
            - containerPort: 3003
          volumeMounts:
            - name: social-data
              mountPath: /data
      volumes:
        - name: social-data
          hostPath:
            path: /tmp/deelish/social      # path on the Docker Desktop VM
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: social-service
spec:
  selector:
    app: social-service
  ports:
    - port: 3003
      targetPort: 3003
